fixed spilling text

--- a/css/main.css
+++ b/css/main.css
@@ -286,6 +286,7 @@ text-decoration-style: dashed;
     box-shadow: 0 0 4px rgba(0,0,0,0.4) inset;
     background: #f8f8f8;
     text-shadow: 0 1px 0 #fff;
+	text-wrap:normal;
     display: block;
     padding: 12px 16px;
     font-size: 14px;
@@ -302,7 +303,7 @@ text-decoration-style: dashed;
     background-color: #f8f8f8;
     font-family: Consolas, "Liberation Mono", Courier, monospace;
     font-size: 14px;
-	word-wrap: break-word;
+	text-wrap: normal;
     line-height: 16px;
     text-shadow: 0 1px 0 #fff;
     -webkit-border-radius: 3px;
